tests/config_untyped/config_untyped.exp
Error ------------------------------------------------------------------------------------------------------ test.js:6:1

Cannot cast `typed` to number because string [1] is incompatible with number [2]. [incompatible-cast]

   test.js:6:1
   6| typed as number; // error: string ~> number
      ^^^^^

References:
   typed/foo.js:5:18
   5| module.exports = 'foo';
                       ^^^^^ [1]
   test.js:6:10
   6| typed as number; // error: string ~> number
               ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:9:29

Cannot resolve module `./untyped/bogus`. [cannot-resolve-module]

   9| const nonexistent = require('./untyped/bogus'); // error, missing module
                                  ^^^^^^^^^^^^^^^^^


Error ------------------------------------------------------------------------------------------------- typed/foo.js:3:1

Cannot cast `'string'` to number because string [1] is incompatible with number [2]. [incompatible-cast]

   typed/foo.js:3:1
   3| 'string' as number; // Error
      ^^^^^^^^ [1]

References:
   typed/foo.js:3:13
   3| 'string' as number; // Error
                  ^^^^^^ [2]



Found 3 errors
